--- a/QRCodeGen.ipynb
+++ b/QRCodeGen.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNVztW+0ty7YVefjs65vBVC",
+      "authorship_tag": "ABX9TyOCVUVi5VFsgiAeFr2bX8Hv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,16 +23,33 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Raghavgarg12/Python-Projects/blob/main/QR%20Code%20generator/QRCodeGen.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Raghavgarg12/QR-Code-Generator/blob/main/QRCodeGen.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
-        "id": "GV3tYINlbjYx"
+        "id": "GV3tYINlbjYx",
+        "outputId": "5055ded1-c89e-4d36-c128-2aaf546d77fc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: pyqrcode in /usr/local/lib/python3.10/dist-packages (1.2.1)\n",
+            "Collecting pypng\n",
+            "  Downloading pypng-0.20220715.0-py3-none-any.whl (58 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.1/58.1 kB\u001b[0m \u001b[31m1.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: pypng\n",
+            "Successfully installed pypng-0.20220715.0\n"
+          ]
+        }
+      ],
       "source": [
         "!pip install pyqrcode pypng"
       ]
@@ -48,25 +65,19 @@
         "import pyqrcode\n",
         "\n",
         "# Define the data:\n",
-        "# We need some text that we want to convert as our QR Code. \n",
-        "# Since I am creating the QR Code for my github profile, \n",
-        "# I will \"https://github.com/milaan9\" as data here. Let's store inside a variable.\n",
-        "data = \"https://thapar.edu\"\n",
+        "# We need some text that we want to convert as our QR Code.\n",
+        "data = \"https://www.linkedin.com/in/raghav-garg-a21930229/\"\n",
         "\n",
         "# Create qrcode:\n",
-        "# Now that we have the data with us, we can move forward and \n",
-        "# make use of the package we just imported. Let's create an variable.\n",
-        "# We will use the create method (as it results in a cleaner looking code) on data.\n",
         "qr = pyqrcode.create(data)\n",
         "\n",
-        "# Save the qrcode in png format with proper scaling:\n",
         "# Now let's store it in .png format with proper scaling.\n",
-        "qr.png(\"githubID.png\", scale= 5)"
+        "qr.png(\"QR.png\", scale= 5)"
       ],
       "metadata": {
         "id": "M9SkWl8Mblkl"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     }
   ]
